adicionando as funcionalidades de CRUD por interface web

--- a/View/base_header.html
+++ b/View/base_header.html
@@ -11,6 +11,10 @@
 </head>
 <body class="body-main">
     <!--  -->
+    <header class="container-menu">
+        <a href="/" title="Home">Home</a>
+        <a href="/list_books" title="List Books">List Books</a>
+    </header>
     {% block content %}
     {% endblock %}
 </body>
