adicionando estilização às telas

--- a/View/base.html
+++ b/View/base.html
@@ -9,7 +9,7 @@
     {% block head_page %}
     {% endblock %}
 </head>
-<body class="body-main">
+<body>
     <!--  -->
     {% block content %}
     {% endblock %}
