--- a/View/index.html
+++ b/View/index.html
@@ -5,8 +5,38 @@
 {% endblock %}
 
 {% block content %}
-    <div>   
-        <h1>Book Store</h1>
-    </div>
-    
+    <main class="">
+        <section class="home-section">
+            <div class="store">   
+                <div class="title">
+                    <div class="subtitle"></div>
+                </div>
+            </div>
+            <div class="books">
+                <div class="bookA">
+                    <span class="icon"></span>
+                    <span class="title">DevOps</span>
+                    <span class="down-line"></span>
+                </div>
+                <div class="bookB">
+                    <span class="top-circle"></span>
+                    <span class="top-line"></span>
+                    <span class="icon"></span>
+                    <span class="title">Design Patterns</span>
+                    <span class="down-line"></span>
+                    <span class="down-circle"></span>
+                </div>
+                <div class="bookC">
+                    <span class="icon"></span>
+                    <span class="title">Computer Network</span>
+                </div>
+                <div class="bookD">
+                    <span class="top-line"></span>
+                    <span class="icon"></span>
+                    <span class="title">Dynamic Programming</span>
+                    <span class="down-line"></span>
+                </div>
+            </div>
+        </section>
+    </main>
 {% endblock %}
