--- a/View/assets/css/style.css
+++ b/View/assets/css/style.css
@@ -1,86 +1,511 @@
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     vertical-align: baseline;
     text-decoration: none;
     border: none;
+    box-sizing: border-box;
     background: none;
+    outline: none;
     font-family: sans-serif;
 }
 
-form {
+:root {
+    --primary: #0069D9;
+    --secondary: #5A6268;
+    --green: #218838;
+    --red: #C82333;
+    --yellow: #E0A800;
+    --blue: #138496;
+    --dark-blue: #0F6D94;
+    --gray: #B9B9B9;
+    --light: #E2E6EA;
+    --dark: #23272B;
+    --white: #FFF;
 }
 
-input {
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 2px 5px;
+a:hover {
+    color: var(--primary);
 }
 
 table {
+    width: 100%;
     margin: 20px 0;
-    border: 1px solid #000;
-}
-
-tr {
-   
+    padding: 10px 20px;
+    background: var(--white);
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
     margin: 8px 16px;
     padding: 4px 8px;
-    border: 1px solid #000;
+    vertical-align: middle;
+    border-top: 1px solid var(--dark);
 }
 
-td.action {
+td .action {
     display: flex;
     gap: 10px;
+    justify-content: center;
+}
+
+.display-none {
+    display: none !important;
+}
+
+.center,
+.center-vertical,
+.center-horizontal {
+    display: flex;
+}
+
+.center {
+    justify-content: center;
+    align-items: center;
+}
+
+.center-horizontal {
+    justify-content: center;
+}
+
+.center-vertical {
+    align-items: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.full-section {
+    width: 100%;
+}
+
+.wide-section {
+    width: 80%;
+}
+
+.medium-section{
+    width: 60%;
+}
+
+.small-section {
+    width: 40%;
+}
+
+.bg-light {
+    background: var(--light);
 }
 
 .btn {
-    padding: 4px 8px;
+    padding: 5px 10px;
     border-radius: 2px;
+    font-size: .9rem;
+}
+
+.btn:hover {
+    cursor: pointer;
 }
 
 .btn-primary {
-    background: #0069D9;
+    border: 1px solid var(--primary);
+    background: var(--primary);
     color: #FFF;
 }
 
 .btn-secondary {
-    background: #5A6268;
+    border: 1px solid var(--secondary);
+    background: var(--secondary);
     color: #FFF;
 }
 
 .btn-success {
-    background: #218838;
+    border: 1px solid var(--green);
+    background: var(--green);
     color: #FFF;
 }
 
 .btn-danger {
-    background: #C82333;
+    border: 1px solid var(--red);
+    background: var(--red);
     color: #FFF;
 }
 
 .btn-warning {
-    background: #E0A800;
+    border: 1px solid var(--yellow);
+    background: var(--yellow);
     color: #FFF;
 }
 
 .btn-info {
-    background: #138496;
+    border: 1px solid var(--blue);
+    background: var(--blue);
     color: #FFF;
 }
 
 .btn-light {
-    background: #E2E6EA;
+    border: 1px solid var(--light);
+    background: var(--light);
 }
 
 .btn-dark {
-    background: #23272B;
+    border: 1px solid var(--dark);
+    background: var(--dark);
     color: #FFF;
 }
 
-.btn-link {
-    color: #0069D9;
+.btn-primary:hover,
+.btn-secondary:hover,
+.btn-success:hover,
+.btn-danger:hover,
+.btn-warning:hover,
+.btn-info:hover,
+.btn-light:hover,
+.btn-dark:hover {
+    background: rgba(0,0,0,0);
 }
+
+.btn-primary:hover {
+    color: var(--primary);
+}
+
+.btn-secondary:hover {
+    color: var(--secondary);
+}
+
+.btn-success:hover {
+    color: var(--green);
+}
+
+.btn-danger:hover {
+    color: var(--red);
+}
+
+.btn-warning:hover {
+    color: var(--yellow);
+}
+
+.btn-info:hover {
+    color: var(--blue);
+}
+
+.btn-light:hover {
+    color: var(--light);
+}
+
+.btn-dark:hover {
+    color: var(--dark);
+}
+
+.btn-link {
+    color: var(--blue);
+}
+
+.btn-link:hover {
+    text-decoration: underline;
+}
+
+.form-section {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background: var(--dark-blue);
+}
+
+.form {
+    width: 40%;
+    margin: 20px 0;
+    padding: 100px 0;
+    border-radius: 15px;
+    background: #FFF;
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+}
+
+.form * {
+    display: flex;
+    justify-content: center;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 40px;
+}
+
+.form-group > label {
+    margin-bottom: 5px;
+    align-self: flex-start;
+    font-size: .9rem;
+}
+
+.form-control {
+    padding: 10px;
+    border: 1px solid var(--gray);
+    border-radius: 5px;
+}
+
+.form-control:focus {
+    border: none;
+    border: 2px solid var(--dark);    
+}
+
+.form-check {
+    margin-top: 30px;
+    gap: 5px;
+}
+
+.header {
+    display: flex;
+    height: 8vh;
+    align-items: center;
+    padding: 0 60px;
+    gap: 15px;
+    background: var(--dark);
+}
+
+.header > * {
+    color: #FFF;
+}
+
+.footer section {
+    display: flex;
+    background: var(--dark);
+}
+
+.footer section * {
+    color: #FFF;
+}
+
+.footer section a:hover {
+    color: var(--primary);
+}
+
+.footer section > *,
+.footer section .links {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.footer section > * {
+    padding: 10px 3vw 20px 3vw;
+}
+
+.footer section > *:first-child {
+    width: 31vw; 
+}
+
+.footer section > *:not(:first-child) {
+    width: 23vw;
+}
+
+.footer section > * > *:first-child  {
+    margin: 10px 0;
+}
+
+.footer .copyhigt {
+    width: 100vw;
+    padding: 8px 3vw;
+    background: var(--gray);
+}
+
+.home-section {
+    display: flex;
+    height: 85vh;
+    padding: 0 60px;
+    justify-content: space-between;
+    background: var(--dark-blue);
+}
+
+.store {
+    margin-left: 8vw;
+    align-self: center;
+}
+
+.store .title {
+    position: relative;
+    width: 3.5vw;
+    height: 15vw;
+    border-radius: 15px;
+    border: .8vw solid;
+}
+
+.store .title::before,
+.store .title::after {
+    position: absolute; 
+    top: -3vw; 
+    font-size: 12vw;
+}
+.store .title::before {
+    content: "B";
+    right: 3vw;
+}
+
+.store .title::after {
+    content: "ok";
+    left: 3vw;
+}
+
+.store .subtitle::before,
+.store .subtitle::after {
+    position: absolute;
+    top: 8vw;
+    font-size: 4.5vw;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.store .subtitle::before {
+    content: "st";
+    right: 4vw;
+}
+
+.store .subtitle::after {
+    content: "re\00a0Tech";
+    left: 3.5vw;
+}
+
+.books {
+    position: relative;
+    width: 26.5vw;
+    height: 72vh;
+    align-self: flex-end;
+    /*border: 1px solid red;*/
+}
+
+.bookA,
+.bookB,
+.bookC,
+.bookD {
+    display: flex;
+    position: absolute;
+    bottom: 10px;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid #000;
+    box-shadow: 6px 10px 5px 2px rgba(0, 0, 0, 0.3);
+}
+
+.bookA {
+    width: 7vw;
+    height: 50vh;
+    left: 0vw;
+    background: var(--red);
+    border-radius: 10px;
+    transform: rotate(4deg);
+} 
+
+.bookB {
+    width: 4vw;
+    height: 70vh;
+    left: 7.9vw;
+    border-radius: 5px;
+    background: var(--green);
+}
+
+.bookC {
+    width: 7vw;
+    height: 64vh;
+    left: 12.1vw;
+    border-radius: 20px;
+    background: var(--secondary);
+}
+
+.bookD {
+    width: 7vw;
+    height: 70vh;
+    left: 19.3vw;
+    border-radius: 10px;
+    background: var(--primary);
+}
+
+.bookA .title,
+.bookB .title,
+.bookC .title,
+.bookD .title {
+    font-size: 1.2rem;
+    color: #000;
+    writing-mode: sideways-lr;
+    text-orientation: upright;
+}
+
+.bookA .down-line,
+.bookA .down-line::after,
+.bookA .down-line::before, 
+.bookB .top-line,
+.bookB .down-line,
+.bookB .top-line::after,
+.bookB .down-line::before,
+.bookD .top-line,
+.bookD .down-line,
+.bookD .top-line::after,
+.bookD .down-line::before {
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background: #000;
+}
+
+.bookA .down-line {
+    bottom: 4vh;
+}
+
+.bookB .top-line {
+    top: 6vh;
+}
+
+.bookB .down-line {
+    bottom: 6vh;
+}
+
+.bookB .top-line::after {
+    content: "";
+}
+
+.bookB .top-circle,
+.bookB .down-circle {
+    position: absolute;
+    border-radius: 100%;
+    width: 1.9vh;
+    height: 1.8vh;
+    background: #000;
+}
+
+.bookA .down-line::after,
+.bookD .top-line::after {
+    content: "";
+    top: 2vh;
+}
+
+.bookA .down-line::before,
+.bookD .down-line::before {
+    content: "";
+    bottom: 2vh;
+}
+
+.bookB .top-circle,
+.bookD .top-line {
+    top: 2vh;
+}
+
+.bookB .down-circle,
+.bookD .down-line {
+    bottom: 2vh;
+}
+
+.content-section {
+    min-height: 65vh;
+}
+
+.content-section .title {
+    margin: 30px 0;
+}
+
+
+
+
+
